--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:background="@drawable/LOGO"
     >
 
     <EditText
@@ -46,8 +45,8 @@
         android:layout_marginBottom="20dp"
         android:background="@color/lightgrey"
         android:text="Zaloguj"
-        app:backgroundTint="@color/lightgrey"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        app:backgroundTint="@color/lightgrey" />
 
 
 </RelativeLayout>
