--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,21 +7,30 @@
     tools:context=".LoginActivity"
     >
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/logo" />
+
     <EditText
         android:id="@+id/Login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/logo"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="417dp"
         android:layout_marginEnd="20dp"
+
         android:background="@color/lightgrey"
+        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
         android:hint="Login"
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black" />
 
     <EditText
+        android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:password="true"
         android:id="@+id/Haslo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,6 +56,8 @@
         android:text="Zaloguj"
         android:textColor="@color/black"
         app:backgroundTint="@color/lightgrey" />
+
+
 
 
 </RelativeLayout>
