--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/ic_menu_camera" />
 
     <EditText
         android:id="@+id/login"
