--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_marginEnd="20dp"
 
         android:background="@color/lightgrey"
-        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
+        android:drawableLeft="@drawable/main_person"
         android:hint="Login"
         android:padding="20dp"
         android:textColor="@color/black"
